# django-icon

./: .coverage  .gitignore  pyproject.toml  test_settings.py
django_icon/: apps.py  fields.py  models.py  tests.py  validators.py
